Collections renamed to Dictionary

--- a/components/services/prov-o/includes/cross-reference-collections.html
+++ b/components/services/prov-o/includes/cross-reference-collections.html
@@ -208,13 +208,13 @@
     </div>
 
     <dl class="description">
-    <dd class="comment"><p>A key-value pair. Part of a prov:Collection through prov:Membership. The key is any RDF Literal, the value is a prov:Entity.</p>
+    <dd class="comment"><p>A key-value pair. Part of a prov:Dictionary through prov:Membership. The key is any RDF Literal, the value is a prov:Entity.</p>
     </dd>
 
       <dt>in domain of</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#key" href="#key">prov:key</a><sup class="type-dp" title="data property">dp</sup>
         <a title="http://www.w3.org/ns/prov#value" href="#value">prov:value</a><sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#key" href="#key">prov:key</a><sup class="type-dp" title="data property">dp</sup>
       </dd>
 
       <dt>in range of</dt>
@@ -511,7 +511,7 @@
     </div>
 
     <div class="description">
-      <div class="comment"><p>An object property to refer to the prov:KeyValuePair inserted into a prov:Collection.</p>
+      <div class="comment"><p>An object property to refer to the prov:KeyValuePair inserted into a prov:Dictionary.</p>
       </div>
       <dl>
 
@@ -554,7 +554,7 @@
     </div>
 
     <div class="description">
-      <div class="comment"><p>The key of a KeyValuePair, which is an element of a prov:Collection.</p>
+      <div class="comment"><p>The key of a KeyValuePair, which is an element of a prov:Dictionary.</p>
       </div>
       <p><strong>has characteristics</strong>  Functional       </p>
       <dl>
