--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -9,13 +9,11 @@
       <p>Similarly, the <span class="repeated">prov:qualifiedAssociation</span> property parallels the <span class="repeated">prov:wasAssociatedWith</span> property, and references an instance of <span class="repeated">prov:Association</span> that provides attributes of the <span class="repeated">prov:wasAssociatedWith</span> relation between the Activity and Agent. The <span class="repeated">prov:agent</span> property is used to cite the Agent that was involved in the Activity. In this case, the plan that the Agent used is provided using the <span class="repeated">prov:hadPlan</span> property and an instance of <span class="repeated">prov:Plan</span>.
       </p>
 
-       <div style="text-align: center;">
-         <figure>
+       <div style="text-align: center;" class="figure">
             <img src="prov-o-diagrams/Qualified-Association.png"
                  style="width: 50%; min-width: 25em; max-width: 60em" 
                  alt="Express association between an activity and an agent using a binary relationship and an alternatie qualified relationship"/>
-            <figcaption>Figure 2. An illustration of the qualification pattern applied to the Starting Point properties <a class="qname" href="#used">prov:used</a> and <a class="qname" href="#wasAssociatedWith">prov:wasAssociatedWith</a>.</figcaption>
-         </figure>
+            <div class="figcaption">Figure 2. An illustration of the qualification pattern applied to the Starting Point properties <a class="qname" href="#used">prov:used</a> and <a class="qname" href="#wasAssociatedWith">prov:wasAssociatedWith</a>.</div>
        </div>
 
       <p>The following two examples show the result of applying the Usage and Association patterns to the chart making example from <a href=#description-starting-point-terms>Section 3.1</a>.
