--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -14,13 +14,11 @@
       <p>These three classes and the properties that relate them are illustrated in the following figure.
       </p>
 
-      <div style="text-align: center;">
-         <figure>
+      <div style="text-align: center;" class="figure">
             <img src="prov-o-diagrams/Starting-points-terms.png"
                  style="width: 50%; min-width: 25em; max-width: 60em" 
                  alt="PROV-O Starting Point terms"/>
-            <figcaption>Figure 1. The three Starting Point classes and the properties that relate them.</figcaption>
-         </figure>
+            <div class="figcaption">Figure 1. The three Starting Point classes and the properties that relate them.</div>
       </div>
 
          <p>
