--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -10,7 +10,7 @@
       </p>
 
        <div style="text-align: center;" class="figure">
-            <img src="prov-o-diagrams/Qualified-Association.png"
+            <img src="http://dvcs.w3.org/hg/prov/raw-file/81a0ed8f5939/ontology/diagrams/Qualified-Association.png"
                  style="width: 50%; min-width: 25em; max-width: 60em" 
                  alt="Express association between an activity and an agent using a binary relationship and an alternatie qualified relationship"/>
             <div class="figcaption">Figure 2. An illustration of the qualification pattern applied to the Starting Point properties <a class="qname" href="#used">prov:used</a> and <a class="qname" href="#wasAssociatedWith">prov:wasAssociatedWith</a>.</div>
