--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -15,7 +15,7 @@
       </p>
 
       <div style="text-align: center;" class="figure">
-            <img src="prov-o-diagrams/Starting-points-terms.png"
+            <img src="http://dvcs.w3.org/hg/prov/raw-file/81a0ed8f5939/ontology/diagrams/Starting-points-terms.png"
                  style="width: 50%; min-width: 25em; max-width: 60em" 
                  alt="PROV-O Starting Point terms"/>
             <div class="figcaption">Figure 1. The three Starting Point classes and the properties that relate them.</div>
