fixed rel links anchors

--- a/components/services/prov-o/prov-o-html-sections/description-collections.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-collections.inc.html
@@ -30,10 +30,10 @@ href='#EmptyDictionary'><code>prov:EmptyDictionary</code></a>.
 
 	<p> To describe the provenance of a dictionary, PROV-O provides two
 kinds of involvements: <code><a class="qname"
-href="qualifiedInsertion">prov:qualifiedInsertion</a></code> is used to
+href="#qualifiedInsertion">prov:qualifiedInsertion</a></code> is used to
 describe that a dictionary was obtained from an existing dictionary by
 <em>inserting</em> a set of key-value pairs.  <code><a class="qname"
-href="qualifiedRemoval">prov:qualifiedRemoval</a></code> is used to specify
+href="#qualifiedRemoval">prov:qualifiedRemoval</a></code> is used to specify
 that a given dictionary was obtained from an existing dictionary by
 <em>removing</em> a set of key-value pairs.  The example below specifies that
 the dictionary <code>:c1</code> was obtained from the empty dictionary
