ref in qual term section

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -1,6 +1,8 @@
      <section id="description-qualified-terms">
        <h3>Qualified Terms</h3>
-       <p>The classes and properties in the Qualified terms category are for users who wish to provide additional details about the relationships between entities, activities, and agents. The terms in this category are the result of applying the <strong>Qualification Pattern</strong> to the simple relations available in the <a href="#prov-starting-point-owl-properties-at-a-glance">Starting Point</a> and <a href="#prov-expanded-owl-properties-at-a-glance">Expanded</a> categories.
+       <p>The classes and properties in the Qualified terms category are for users who wish to provide additional details about the relationships between entities, activities, and agents. 
+          The terms in this category are the result of applying the <strong>Qualification Pattern</strong> to the simple relations available in the 
+          <a href="#prov-starting-point-owl-terms-at-a-glance">Starting Point</a> and <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a> categories.
       </p>
       <p>For example, Figure 2 illustrates the classes and properties needed to fulfill the qualification pattern for the <a class="qname" href="#used">prov:used</a> and <a class="qname" href="#wasAssociatedWith">prov:wasAssociatedWith</a> properties. While <a class="qname" href="#qualifiedUsage">prov:qualifiedUsage</a>, <a class="qname" href="#Usage">prov:Usage</a>, and <a class="qname" href="#entity">prov:entity</a> are used to qualify <span class="repeated">prov:used</span> relations, <a class="qname" href="#qualifiedAssociation">prov:qualifiedAssociation</a>, <a class="qname" href="#Association">prov:Association</a>, and <a class="qname" href="#agent">prov:agent</a> are used to qualify <span class="repeated">prov:wasAssociatedWith</span> relations. This pattern applies to the twelve other relations that can be qualified.
       </p>
