--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -13,7 +13,7 @@ Location??, hadLocation?, wasStartedByActivity?? specializationOf?
 
         <p>This section defines additional terms for describing provenance at a greater level of specificity in Agents (i.e., <a href="#Person" class="qname">prov:Person</a> or
 		<a href="#SoftwareAgent" class="qname">prov:SoftwareAgent</a> and <a href="#Organization" class="qname">prov:Organization</a>) and entities 
-		(<a href="#specializationOf" class="qname">prov:specializationOf</a> and <a href="#AlternateOf" class="qname">prov:AlternateOf</a>). 
+		(<a href="#specializationOf" class="qname">prov:specializationOf</a> and <a href="#alternateOf" class="qname">prov:AlternateOf</a>). 
 		</p>
 		<p>
 		Additionally, some of these terms provide the means to assert extended details about the concepts introduced in section 3.1
